add an output page to show the last result

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ venv/
 # Python cache
 __pycache__
 # CRISPResso output
-output/**/*
-!output/.keep
+static/output/**/*
+!static/output/.keep
 # app uploads
 uploads/**/*
 !uploads/.keep
